@@ -91,7 +91,7 @@ cyphertext is ascii-encoded to prevent munging. Another option returns
 JavaScript code which offers identical functions in JS, and this can
 be used by CGIs to feed to the browser.
 
-Version 2.11
+Version 2.12
 
 =head1 AUTHOR
 
